[refactor] revert into fixed thread pool from virtual thread pool